feat: update code

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3cd1998f",
    "metadata": {},
    "outputs": [
@@ -64,20 +64,31 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"glass-data.csv\", sep='\\t')\n",
+    "df = pd.read_csv(\"glass-data.csv\", sep=\"\\t\")\n",
+    "df.columns = df.columns.str.strip()  \n",
     "\n",
+    "# Đổi tên cột để dễ thực hiện\n",
+    "df.columns = [\n",
+    "    \"Id\", \"RI\", \"Na\", \"Mg\", \"Al\", \"Si\", \"K\", \"Ca\", \"Ba\", \"Fe\", \"Type\"\n",
+    "]\n",
+    "\n",
+    "# a. Kích thước dữ liệu\n",
     "print(\"a. Kích thước dữ liệu:\", df.shape)\n",
     "print(\"   Số hàng (mẫu):\", df.shape[0])\n",
     "print(\"   Số cột (thuộc tính):\", df.shape[1])\n",
     "\n",
+    "# b. Kiểu dữ liệu\n",
     "print(\"\\nb. Kiểu dữ liệu của các thuộc tính:\")\n",
     "print(df.dtypes)\n",
     "\n",
+    "# c. Số lượng từng giá trị nhãn (cột Type)\n",
     "print(\"\\nc. Số lượng thực thể của từng giá trị nhãn:\")\n",
-    "print(df.iloc[:, -1].value_counts())\n",
+    "print(df[\"Type\"].value_counts())\n",
     "\n",
+    "# d. Giá trị min, max, mean\n",
     "print(\"\\nd. Giá trị thống kê của các cột số thực:\")\n",
-    "print(df.describe().loc[[\"min\", \"max\", \"mean\"]])\n"
+    "print(df.describe().loc[[\"min\", \"max\", \"mean\"]])\n",
+    "\n"
    ]
   }
  ],
