feat: update code

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3cd1998f",
    "metadata": {},
    "outputs": [
@@ -15,21 +15,21 @@
       "   Số cột (thuộc tính): 11\n",
       "\n",
       "b. Kiểu dữ liệu của các thuộc tính:\n",
-      "Id                                                                            int64\n",
-      " RI: refractive index                                                       float64\n",
-      "Na: Sodium (unit measurement: weight percent in corresponding oxide, as     float64\n",
-      "Mg: Magnesium                                                               float64\n",
-      "Al: Aluminum                                                                float64\n",
-      "Si: Silicon                                                                 float64\n",
-      "K: Potassium                                                                float64\n",
-      "Ca: Calcium                                                                 float64\n",
-      "Ba: Barium                                                                  float64\n",
-      "Fe: Iron                                                                    float64\n",
-      "Type of glass: (class attribute)                                              int64\n",
+      "Id        int64\n",
+      "RI      float64\n",
+      "Na      float64\n",
+      "Mg      float64\n",
+      "Al      float64\n",
+      "Si      float64\n",
+      "K       float64\n",
+      "Ca      float64\n",
+      "Ba      float64\n",
+      "Fe      float64\n",
+      "Type      int64\n",
       "dtype: object\n",
       "\n",
       "c. Số lượng thực thể của từng giá trị nhãn:\n",
-      "Type of glass: (class attribute)\n",
+      "Type\n",
       "2    76\n",
       "1    70\n",
       "7    29\n",
@@ -39,25 +39,15 @@
       "Name: count, dtype: int64\n",
       "\n",
       "d. Giá trị thống kê của các cột số thực:\n",
-      "         Id   RI: refractive index  \\\n",
-      "min     1.0               1.511150   \n",
-      "max   214.0               1.533930   \n",
-      "mean  107.5               1.518365   \n",
+      "         Id        RI        Na        Mg        Al         Si         K  \\\n",
+      "min     1.0  1.511150  10.73000  0.000000  0.290000  69.810000  0.000000   \n",
+      "max   214.0  1.533930  17.38000  4.490000  3.500000  75.410000  6.210000   \n",
+      "mean  107.5  1.518365  13.40785  2.684533  1.444907  72.650935  0.497056   \n",
       "\n",
-      "      Na: Sodium (unit measurement: weight percent in corresponding oxide, as   \\\n",
-      "min                                            10.73000                          \n",
-      "max                                            17.38000                          \n",
-      "mean                                           13.40785                          \n",
-      "\n",
-      "      Mg: Magnesium  Al: Aluminum  Si: Silicon  K: Potassium  Ca: Calcium  \\\n",
-      "min        0.000000      0.290000    69.810000      0.000000     5.430000   \n",
-      "max        4.490000      3.500000    75.410000      6.210000    16.190000   \n",
-      "mean       2.684533      1.444907    72.650935      0.497056     8.956963   \n",
-      "\n",
-      "      Ba: Barium  Fe: Iron  Type of glass: (class attribute)  \n",
-      "min     0.000000  0.000000                          1.000000  \n",
-      "max     3.150000  0.510000                          7.000000  \n",
-      "mean    0.175047  0.057009                          2.780374  \n"
+      "             Ca        Ba        Fe      Type  \n",
+      "min    5.430000  0.000000  0.000000  1.000000  \n",
+      "max   16.190000  3.150000  0.510000  7.000000  \n",
+      "mean   8.956963  0.175047  0.057009  2.780374  \n"
      ]
     }
    ],
