hoan thanh code task 3

--- a/main.ipynb
+++ b/main.ipynb
@@ -80,6 +80,111 @@
     "print(df.describe().loc[[\"min\", \"max\", \"mean\"]])\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d1402368",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " KẾT QUẢ SO SÁNH MÔ HÌNH\n",
+      "\n",
+      "🔹 Model: KNN\n",
+      "   F1 Score (Macro): 0.7873\n",
+      "   Best Params:\n",
+      "      knn__n_neighbors: 3\n",
+      "      knn__weights: distance\n",
+      "--------------------------------------------------\n",
+      "🔹 Model: Random Forest\n",
+      "   F1 Score (Macro): 0.9765\n",
+      "   Best Params:\n",
+      "      max_depth: None\n",
+      "      min_samples_split: 2\n",
+      "      n_estimators: 200\n",
+      "--------------------------------------------------\n",
+      "🔹 Model: SVM (RBF)\n",
+      "   F1 Score (Macro): 0.8221\n",
+      "   Best Params:\n",
+      "      svm__C: 10\n",
+      "      svm__gamma: scale\n",
+      "      svm__kernel: rbf\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import GridSearchCV, KFold\n",
+    "from sklearn.metrics import f1_score, make_scorer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "# === 1. Load data ===\n",
+    "df = pd.read_csv(\"glass-data.csv\", sep=\"\\t\")\n",
+    "\n",
+    "X = df.iloc[:, :-1]\n",
+    "y = df.iloc[:, -1]\n",
+    "\n",
+    "# === 2. Define CV & scorer ===\n",
+    "kfold = KFold(n_splits=10, shuffle=True, random_state=42)\n",
+    "f1 = make_scorer(f1_score, average='macro')\n",
+    "\n",
+    "# === 3. Models & params ===\n",
+    "models = {\n",
+    "    \"KNN\": (\n",
+    "        Pipeline([(\"scaler\", StandardScaler()), (\"knn\", KNeighborsClassifier())]),\n",
+    "        {\"knn__n_neighbors\": [3, 5, 7, 9],\n",
+    "         \"knn__weights\": [\"uniform\", \"distance\"]}\n",
+    "    ),\n",
+    "    \n",
+    "    \"Random Forest\": (\n",
+    "        RandomForestClassifier(random_state=42),\n",
+    "        {\"n_estimators\": [100, 200, 300],\n",
+    "         \"max_depth\": [None, 5, 10, 20],\n",
+    "         \"min_samples_split\": [2, 5]}\n",
+    "    ),\n",
+    "    \n",
+    "    \"SVM (RBF)\": (\n",
+    "        Pipeline([(\"scaler\", StandardScaler()), (\"svm\", SVC())]),\n",
+    "        {\"svm__C\": [0.1, 1, 10],\n",
+    "         \"svm__gamma\": [\"scale\", \"auto\"],\n",
+    "         \"svm__kernel\": [\"rbf\"]}\n",
+    "    )\n",
+    "}\n",
+    "\n",
+    "# === 4. Training & saving results ===\n",
+    "rows = []\n",
+    "\n",
+    "for name, (model, params) in models.items():\n",
+    "    grid = GridSearchCV(model, params, cv=kfold, scoring=f1, n_jobs=-1)\n",
+    "    grid.fit(X, y)\n",
+    "\n",
+    "    rows.append([\n",
+    "        name,\n",
+    "        round(grid.best_score_, 4),\n",
+    "        grid.best_params_\n",
+    "    ])\n",
+    "\n",
+    "results = pd.DataFrame(rows, columns=[\"Model\", \"F1 Score (Macro)\", \"Best Hyperparameters\"])\n",
+    "\n",
+    "# === 5. Display better formatted output ===\n",
+    "print(\"\\n KẾT QUẢ SO SÁNH MÔ HÌNH\\n\")\n",
+    "for idx, row in results.iterrows():\n",
+    "    print(f\"🔹 Model: {row['Model']}\")\n",
+    "    print(f\"   F1 Score (Macro): {row['F1 Score (Macro)']}\")\n",
+    "    print(f\"   Best Params:\")\n",
+    "    for k, v in row[\"Best Hyperparameters\"].items():\n",
+    "        print(f\"      {k}: {v}\")\n",
+    "    print(\"-\" * 50)\n"
+   ]
   }
  ],
  "metadata": {
@@ -98,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.4"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
