docs: update document

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f947b196",
+   "metadata": {},
+   "source": [
+    "# Đề tài: Nghiên cứu và Đánh giá Hiệu năng các Mô hình Học máy trong Bài toán Phân loại Loại kính\n",
+    "\n",
+    "---\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e6aa1abe",
    "metadata": {},
    "source": [
